[package]
name = "mqtt5bytes"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"
license = "MIT"
description = "MQTT 5 core serialization and deserialization"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
std = ["thiserror", "tokio-util"]
default = ["std"]

[dependencies]
bytes = { version = "0.5", default-features = false }
tokio-util = { version = "0.3", features = ["codec"], optional = true }
thiserror = { version = "1", optional = true }
rand = "0.7"
cfg-if = "0.1"

[dev-dependencies]
pretty_assertions = "0.6.1"